[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrunner-lib"
version = "0.1.0"
authors = [
  { name="DataSpace", email="you@example.com" },
]
description = "Dataframe transform runner for DataSpace"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]