[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrunner-lib"
version = "0.1.1"
authors = [
  { name="DataSpace", email="info@data-space.dev" },
]
description = "Dataframe transform runner for DataSpace"
requires-python = ">=3.7"

[project.scripts]
pyrunner = "pyrunner_lib.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
