[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrunner-lib"
version = "0.2.0"
authors = [
  { name="DataSpace", email="info@data-space.dev" },
]
description = "Dataframe transform runner for DataSpace"
requires-python = ">=3.9"
dependencies = [
    "polars>=1.34.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
pyrunner = "pyrunner_lib.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=pyrunner_lib --cov-report=term-missing --cov-report=html"